# pradel-jax

./: .gitignore  CHANGELOG.md  CLAUDE.md  GITHUB_SETUP_GUIDE.md  INSTALLATION.md  OPTIMIZATION_FRAMEWORK_SUMMARY.md  README.md  SECURITY_AUDIT_REPORT.md  TODO_MAINTENANCE.md  bootstrap_inference_demo.py  cleanup_report_20250930_103849.txt  cleanup_repository.py  comprehensive_validation_audit.py  comprehensive_workflow_analysis_report.md  comprehensive_workflow_examination.py  comprehensive_workflow_examination_20250826_080922.json  comprehensive_workflow_examination_20250826_081022.json  conftest.py  debug_jax_assignment_error.py  debug_jax_convergence.py  enhanced_time_varying_adapter.py  final_time_varying_validation.py  focused_workflow_examination.py  gpu_acceleration_benchmark.py  gpu_acceleration_benchmark_report_20250822_093935.md  large_scale_scalability_report_20250822_091327.md  nebraska_full_results_1000ind_20250825_185624.csv  nebraska_full_results_10ind_20250825_181047.csv  nebraska_full_results_10ind_20250825_182323.csv  nebraska_full_results_111697ind_20250825_180449.csv  nebraska_full_results_111697ind_20250825_181331.csv  nebraska_full_results_111697ind_20250825_190802.csv  nebraska_full_results_111697ind_20250825_193059.csv  nebraska_full_results_111697ind_20250826_074039.csv  nebraska_full_results_20000ind_20250825_193017.csv  nebraska_full_results_20ind_20250825_185607.csv  nebraska_full_results_50000ind_20250825_190326.csv  nebraska_full_results_5000ind_20250825_185749.csv  nebraska_model_comparison_1000ind_20250825_191533.csv  nebraska_model_comparison_10ind_20250825_181047.csv  (+52 more)
.github/workflows/: ci.yml  performance-tests.yml
.mplconfig/: fontlist-v390.json
data/: Mark Recap Updated.R  README.md  dipper_dataset.csv  dipper_minimal.csv  dipper_processed.csv  generate_synthetic_hunter_data.py  synthetic_capture_recapture_data.csv
data/test_datasets/: wf.dat.csv
docs/: Evaluating tools for capture-recapture model selec  README.md
docs/api/: README.md  core.md  models.md
docs/deployment/: README.md  production-deployment-guide.md
docs/development/: DIRECTORY_REORGANIZATION_PLAN.md  contributing.md  dependencies.md  pradel_boundary_prior.md  (+3 more)
examples/: optimization_demo.py  run_ne_full.py  run_ne_simple.py  run_sd_full.py  run_sd_simple.py  statistical_inference_demo.py  test_new_architecture.py
pradel_jax/: __init__.py
scripts/: monitor_performance.py
tests/: README.md  conftest.py
validation_results/: validation_report_20250826_075137.json  validation_summary_20250826_075137.md
(+252 files in other folders)
